@@ -86,6 +86,9 @@
 - Updated object: Caucasian Fir Tree (rct2.scenery_small.tcf)
 - Updated object: Red Fir Tree (rct2.scenery_small.trf)
 - Updated object: Red Fir Tree (rct2.scenery_small.trf2)
+- Updated object: Tree (rct2.scenery_small.ts0)
+- Updated object: Tree (rct2.scenery_small.ts1)
+- Updated object: Tree (rct2.scenery_small.ts2)
 - Updated object: Giraffe Statue (rct2.scenery_small.tgs)
 - Updated object: Roof (rct2.scenery_small.sumrf)
 - Updated object: Roman Colosseum (rct2.scenery_large.scol)
